tests/negative/symbols/use_undef6.orng
// use_undef6.orng:10:6: error: symbol `x` is never defined
//     x[2]
//     ^
// use_undef6.orng:9:10: note: declared here
//     let x: [4]Int = undefined
//         ^
// 
fn main() -> Int {
    let x: [4]Int = undefined
    x[2]
}